[package]
description = "sl(1) in Rust :3"
edition = "2021"
homepage = "https://github.com/qualk/sl-rs/"
license = "AGPL-3.0-or-later"
name = "sl-rs"
repository = "https://github.com/qualk/sl-rs/"
readme = "README.md"
version = "0.2.4"
keywords = ["joke", "cli"]
categories = ["command-line-utilities", "games"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.4.18", features = ["derive"]}
crossterm = "0.26.1"
ctrlc = "3.4.1"
lazy_static = "1.4.0"

[profile.release]
panic = 'abort'

[[bin]]
name = "sl"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.{ archive-format }"
bin-dir = "{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.i686-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
